<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/gander_ic_search_white_24dp"
        android:title="@string/gander_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/clear"
        android:icon="@drawable/gander_ic_delete_white_24dp"
        android:title="@string/gander_clear"
        app:showAsAction="always" />
    <item
        android:id="@+id/browse_sql"
        android:title="@string/gander_browse_sql_database"
        android:visible="false"
        app:showAsAction="never" />
</menu>